myapp-deployment-dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uki-bi-app-2
spec:
  replicas: 1
  revisionHistoryLimit: 0 # Default to 10 if not specified
  selector:
    matchLabels:
      app: uki-bi-app-2
  template:
    metadata:
      labels:
        app: uki-bi-app-2
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      securityContext: {}
      automountServiceAccountToken: false
      dnsPolicy: ClusterFirst
      containers:
      - name: uki-bi-app-2
        image: kyndryl.jfrog.io/uki-business-intelligence-test-docker-local/uki-bi-app-2:latest
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 32m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        imagePullPolicy: Always
        terminationMessagePolicy: File
