myapp-deployment.template.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdisched
spec:
  replicas: 1
  revisionHistoryLimit: 0 # Default to 10 if not specified
  selector:
    matchLabels:
      app: cdisched
  template:
    metadata:
      labels:
        app: cdisched
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      securityContext: {}
      automountServiceAccountToken: false
      dnsPolicy: ClusterFirst
      containers:
      - name: cdisched
        image: $imageName
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 32m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        imagePullPolicy: Always
        terminationMessagePolicy: File
