myapp-sn-route-dev.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: CDISCHED
    type: internal-apps-001
  name: uki-bi-app-2-route-dev
  namespace: ns-uki-bi-app-2-gd-kps-dev-wus3
spec:
  host: cdi-scheduler-dev.zkpw3uspriv.app.kyndryl.net
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: uki-bi-app-2-svc
