myapp-sn-route-testqa.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: CDISCHED
    type: internal-apps-001
  name: cdisched-route-testqa
  namespace: ns-cdisched-gd-kps-testqa-wus3
spec:
  host: cdi-scheduler-testqa.zkpw3uspriv.app.kyndryl.net
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: cdisched-svc
