myapp-sn-route.template.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: CDISCHED
    type: internal-apps-001
  name: uki-bi-app-2-route
  namespace: $namespace
spec:
  host: $hostName
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: uki-bi-app-2-svc
