myapp-sn-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: CDISCHED
    type: internal-apps-001
  name: cdisched-route
  namespace: ns-cdisched-gd-kps-dev-wus3
spec:
  host: cdisched-dev.zkpw3uspriv.app.kyndryl.net
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: cdisched-svc
